--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
            	<hr class="w-25">         
                 <p>Eagle Plumbing Specialist is a website template for plumbing company. The website uses Bootstrap completely for its layout.</p>
 				<p>Build Tools: Bootstrap, HTML5, CSS3 and Javascript</p>
-				 <p><a href="https://github.com/FunkeMak/Portfolio/eagle-plumbing" class="btn btn-sm  btn-primary font-weight-bold">View Live Demo</a></p>
+				 <p><a href="https://funkemak.github.io/Portfolio/eagle-plumbing/" class="btn btn-sm  btn-primary font-weight-bold">View Live Demo</a></p>
                 
             </div>
             
