--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
            	<hr class="w-25">         
                 <p>Precious Kids Preschool is a website template for preschools. The website uses Bootstrap completely for its layout.</p>
 				<p>Build Tools: Bootstrap, HTML5, CSS3 and Javascript</p>
-				 <p><a href="https://github.com/FunkeMak/Portfolio/precious-preschool/" class="btn btn-sm  btn-primary font-weight-bold">View Live Demo</a></p>
+				 <p><a href="https://funkemak.github.io/Portfolio/precious-preschool" class="btn btn-sm  btn-primary font-weight-bold">View Live Demo</a></p>
                 
             </div>
             <div class="col-md-6 py-2">
